--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
 .App {
   text-align: center;
+  margin: 0;
+  padding: 0;
+  box-sizing: content-box;
+  width: 100vw;
+  height: 100vh;
+  background-color: #f2e9e1;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#Landing {
   display: flex;
   flex-direction: column;
+  height: 100%;
+  justify-content: start;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+#Landing h1 {
+  font-size: 80px;
+  margin-bottom: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#Landing div {
+  margin-top: 50px;
+  width: 25vw;
+  height: 50vh;
 }
+#Landing div .clock {
+  position: fixed;
+  width: auto;
+  height: 50vh;
+  z-index: 1;
+  transition: 1s;
+}
+#Landing div .pomoCat {
+  position: static;
+  transform: rotate(135deg);
+  z-index: 0;
+  height: 50vh;
+  width: auto;
+  transition: 1s;
+}
+#Landing div:hover .clock {
+  transform: scale(1.1);
+}
+#Landing div:hover .pomoCat {
+  transform: scale(0.8) rotate(135deg);
+  margin-top: 13em;
+  margin-left: 14em;
+}/*# sourceMappingURL=App.css.map */
