--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,14 @@
   box-sizing: content-box;
   width: 100vw;
   height: 100vh;
-  background-color: #f2e9e1;
 }
 
 #Landing {
+  background-color: #f2e9e1;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  height: 100%;
   justify-content: start;
   align-items: center;
 }
@@ -45,6 +46,57 @@
 #Landing div:hover .pomoCat {
   transform: scale(0.8) rotate(135deg);
   margin: 13em 0 0 14em;
+}
+
+#Home {
+  background-color: #f2e9e1;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+#Home .config-Timer-background {
+  display: flex;
+  justify-content: center;
+}
+#Home .config-Timer-background #color {
+  margin-right: 10px;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #000;
+  border-radius: 50%;
+}
+#Home .config-Timer-background #color:hover {
+  cursor: pointer;
+}
+#Home .config-Timer-background #color:active {
+  border: 1px solid #fff;
+}
+#Home .config-Timer-background .default {
+  background-color: #f2e9e1;
+}
+#Home .config-Timer-background .grey {
+  background-color: #4d4d4d;
+}
+#Home .config-Timer-background .green {
+  background-color: #18741f;
+}
+#Home .config-Timer-background .blue {
+  background-color: #080064;
+}
+#Home .config-Timer-background .violet {
+  background-color: #330b56;
+}
+#Home .config-Timer-background .dark {
+  background-color: #191818;
+}
+
+#Timer {
+  width: 100vw;
+  height: 100%;
+}
+#Timer .time {
+  font-size: 300px;
 }
 
 @media (max-width: 720px) {
