--- a/src/App.scss
+++ b/src/App.scss
@@ -13,13 +13,14 @@ $backgroundColor: #f2e9e1;
   box-sizing: content-box;
   width: 100vw;
   height: 100vh;
-  background-color: $backgroundColor;
 }
 
 #Landing{
+  background-color: $backgroundColor;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  height: 100%;
   justify-content: start;
   align-items: center;
 h1{
@@ -57,6 +58,55 @@ div:hover{
 }
 }
 
+#Home{
+  background-color: $backgroundColor;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  .config-Timer-background{
+    display: flex;
+    justify-content: center;
+    #color{
+      margin-right: 10px;
+      width: 30px;
+      height: 30px;
+      border: 1px solid #000;
+      border-radius: 50%;
+    }
+    #color:hover{
+      cursor: pointer;
+    }
+    #color:active{
+      border: 1px solid #fff;
+    }
+    .default{
+      background-color: $backgroundColor;
+    }
+    .grey{
+      background-color: #4d4d4d;
+    }
+    .green{
+      background-color: #18741f;
+    }
+    .blue{
+      background-color: #080064;
+    }
+    .violet{
+      background-color: #330b56;
+    }
+    .dark{
+      background-color: #191818;
+    }
+  }
+}
+#Timer{
+  width: 100vw;
+  height: 100%;
+  .time{
+    font-size: 300px;
+  }
+}
 
 @media (max-width: 720px){
   #Landing{
