--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@
 }
 
 #Landing {
-  background-color: #f2e9e1;
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -17,6 +16,7 @@
   align-items: center;
 }
 #Landing h1 {
+  font-family: Playfair Display;
   font-size: 80px;
   margin-bottom: 10px;
 }
@@ -49,90 +49,105 @@
 }
 
 #Home {
-  background-color: #f2e9e1;
   width: 100vw;
   height: 100vh;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-around;
   align-items: center;
 }
+#Home .result-home {
+  background-color: #ffffff;
+  border: 3px solid #000;
+  width: 30%;
+  height: 80%;
+}
 #Home .container-home {
-  background-color: #a9d6ec;
-  border: 1px solid #58a9ff;
-  width: 35%;
+  background-color: #ffffff;
+  border: 3px solid #000;
+  width: 30%;
   height: 80%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
 }
-#Home .container-home .config-Timer-time {
+#Home .container-home #divisores {
+  border: #000 solid 2px;
+  display: flex;
+  flex-direction: column;
+  align-items: space-around;
+  justify-content: start;
+  width: 80%;
+}
+#Home .container-home #divisores .config-Timer-time {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  width: 50%;
+  width: auto;
   height: auto;
 }
-#Home .container-home .config-Timer-time #time {
+#Home .container-home #divisores .config-Timer-time #time {
   background-color: #58a9ff;
   border-radius: 25% 25% 25% 25%;
   border: none;
   color: #f2f2f2;
-  height: 40px;
+  height: 45px;
   font-size: 20px;
   transition: 0.5s;
 }
-#Home .container-home .config-Timer-time #time:hover {
+#Home .container-home #divisores .config-Timer-time #time:hover {
   cursor: pointer;
   transform: scale(1.18);
 }
-#Home .container-home .config-Timer-time #time-active {
+#Home .container-home #divisores .config-Timer-time #time-active {
   background-color: #58a9ff;
-  border: 0.8px solid #f2f2f2;
+  border: 0.8px solid black;
   color: #f2f2f2;
-  border-radius: 35%;
+  border-radius: 25% 25% 25% 25%;
+  height: 45px;
   font-size: 20px;
   transform: scale(1.15);
   transition: 0.5s;
 }
-#Home .container-home .config-Timer-sessions {
+#Home .container-home #divisores .config-Timer-sessions {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  width: 100%;
+  width: auto;
   height: auto;
 }
-#Home .container-home .config-Timer-sessions #sessions {
+#Home .container-home #divisores .config-Timer-sessions #sessions {
   background-color: #58a9ff;
   border-radius: 25% 25% 25% 25%;
   border: none;
   color: #f2f2f2;
-  height: 40px;
+  height: 45px;
   font-size: 20px;
   transition: 0.5s;
 }
-#Home .container-home .config-Timer-sessions #sessions:hover {
+#Home .container-home #divisores .config-Timer-sessions #sessions:hover {
   cursor: pointer;
   transform: scale(1.18);
 }
-#Home .container-home .config-Timer-sessions #sessions-active {
+#Home .container-home #divisores .config-Timer-sessions #sessions-active {
   background-color: #58a9ff;
-  border: 0.8px solid #f2f2f2;
+  border: 0.8px solid black;
   color: #f2f2f2;
-  border-radius: 35%;
+  border-radius: 25% 25% 25% 25%;
+  height: 45px;
   font-size: 20px;
   transform: scale(1.15);
   transition: 0.5s;
 }
-#Home .container-home .config-Timer-background {
+#Home .container-home #divisores .config-Timer-background {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  width: 60%;
+  width: auto;
   height: auto;
 }
-#Home .container-home .config-Timer-background #color {
+#Home .container-home #divisores .config-Timer-background #color {
   margin-right: 10px;
   width: 48px;
   height: 48px;
@@ -140,36 +155,55 @@
   border-radius: 50%;
   transition: 0.5s;
 }
-#Home .container-home .config-Timer-background #color:hover {
+#Home .container-home #divisores .config-Timer-background #color:hover {
   cursor: pointer;
   transform: scale(1.05);
 }
-#Home .container-home .config-Timer-background #color-active {
-  border: 2px solid #00c3ff;
+#Home .container-home #divisores .config-Timer-background #color-active {
+  border: 3px solid #00c3ff;
   margin-right: 10px;
   width: 48px;
   height: 48px;
   border-radius: 50%;
   transform: scale(1.1);
-  transition: 1s;
 }
-#Home .container-home .config-Timer-background .default {
-  background-color: #f2e9e1;
+#Home .container-home #divisores .config-Timer-background .default {
+  background-color: #a9d6ec;
 }
-#Home .container-home .config-Timer-background .grey {
+#Home .container-home #divisores .config-Timer-background .grey {
   background-color: #4d4d4d;
 }
-#Home .container-home .config-Timer-background .green {
-  background-color: #18741f;
+#Home .container-home #divisores .config-Timer-background .green {
+  background-color: #1a9825;
 }
-#Home .container-home .config-Timer-background .blue {
+#Home .container-home #divisores .config-Timer-background .blue {
   background-color: #080064;
 }
-#Home .container-home .config-Timer-background .violet {
+#Home .container-home #divisores .config-Timer-background .violet {
   background-color: #330b56;
 }
-#Home .container-home .config-Timer-background .dark {
+#Home .container-home #divisores .config-Timer-background .dark {
   background-color: #191818;
+}
+#Home .container-home .btn-start {
+  background-color: #58a9ff;
+  color: #f2f2f2;
+  width: 100px;
+  height: 50px;
+  font-size: 25px;
+  border-radius: 20%;
+  transition: 1s;
+}
+#Home .container-home .btn-start:hover {
+  cursor: pointer;
+}
+#Home .container-home .btn-start-disabled {
+  background-color: #a9d6ec;
+  color: #ffffff;
+  width: 100px;
+  height: 50px;
+  font-size: 25px;
+  border-radius: 20%;
 }
 
 #Timer {
@@ -180,10 +214,20 @@
   align-items: center;
   justify-content: start;
 }
+#Timer .timer-status {
+  flex-direction: row;
+  display: flex;
+}
 #Timer h1 {
+  border: solid 1px #000;
   font-size: 300px;
   -webkit-text-fill-color: black;
   -webkit-text-stroke: 8px #f2f2f2;
+}
+#Timer h2 {
+  font-size: 50px;
+  -webkit-text-fill-color: black;
+  -webkit-text-stroke: 1px #f2f2f2;
 }
 
 @media (max-width: 720px) {
