--- a/src/App.scss
+++ b/src/App.scss
@@ -111,11 +111,19 @@ div:hover{
     justify-content: space-around;
     align-items: center;
     .demo{
-      width: 300px;
+      width: 450px;
+      height: 250px;
+    }
+    .kitty{
       height: 150px;
     }
     #divisores{
-      @include flexibility(column, space-around, start);
+      border: #000 solid 1px;
+      background-color: #00000020;
+      border-radius: 6%;
+      padding-top: 0;
+      padding-bottom: 15px;
+      @include flexibility(column, space-around, center);
       width: 80%;
       .config-Timer-time{
         
@@ -145,7 +153,7 @@ div:hover{
         }
       };
       
-    .config-Timer-background{
+      .config-Timer-background{
       @include sections();
       #color{
         margin-right: 10px;
@@ -186,6 +194,7 @@ div:hover{
       background-color: #191818;
     }
   }
+
 }
   
   .btn-start{
@@ -261,6 +270,42 @@ div:hover{
     margin-top: 30px;
     width: 70%;
   }
+  
+}
+
+#Preview{
+  height: 99%;
+  border: 3px solid #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  .prev-img{
+    img{
+      width: 30px;
+    }
+  }
+
+  .prev-status{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    h3{
+      font-size: 20px;
+      -webkit-text-fill-color: black;
+      -webkit-text-stroke: 1px $white;
+    }
+  }
+  h3{
+      margin-top: 15px;
+      margin-bottom: 20px;
+      font-size: 80px;
+      -webkit-text-fill-color: black;
+      -webkit-text-stroke: 2px $white;
+    } 
+  
+  
+  
+  
   
 }
 
