--- a/src/App.scss
+++ b/src/App.scss
@@ -46,7 +46,6 @@ $secondary: #ffffff;
 
 #Landing{
   // background: linear-gradient($firstColor 70%, #278efc);
-  color: #22214e;
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -94,6 +93,7 @@ div:hover{
 
 #Home{
   // background: linear-gradient($firstColor 70%, #278efc);
+  
   width: 100vw;
   height: 100vh;
     display: flex;
@@ -101,6 +101,7 @@ div:hover{
     justify-content: space-around;
     align-items: center;
   .container-home, .result-home{
+    z-index: 0;
     border: #000 solid 2px;
     background-color: $secondary;
     border-radius: 5%;
@@ -118,6 +119,8 @@ div:hover{
       height: 150px;
     }
     #divisores{
+      z-index: -1;
+
       border: #000 solid 1px;
       background-color: #00000020;
       border-radius: 6%;
@@ -140,6 +143,13 @@ div:hover{
       }
     }
     .config-Timer-sessions{
+      #Background{
+        @include button();
+      }
+      #Background:hover{
+        cursor: pointer;
+        transform: scale(1.18)
+      }
       @include sections();
       #sessions{
         @include button();
@@ -224,8 +234,8 @@ div:hover{
 
 #Timer{
   width: 100vw;
-  
   height: 100%;
+  z-index: 1;
   @include flexibility(column, center, center);
   .buttons-timer{
     position: absolute;
@@ -248,7 +258,10 @@ div:hover{
     align-items: start;
     width: 50%;
     height: 10%;
+    z-index: 1;
     h2{
+      
+      font-family: Playfair Display;
       margin: 0;
       font-size: 50px;
       -webkit-text-fill-color: black;
@@ -257,9 +270,11 @@ div:hover{
   }
   .time{
     height: auto;
+    z-index: 1;
     display: flex;
     justify-content: start;
     h1{
+      font-family: Playfair Display;
       font-size: 390px;
       -webkit-text-fill-color: black;
       -webkit-text-stroke: 8px $white;
@@ -290,12 +305,14 @@ div:hover{
     flex-direction: row;
     justify-content: space-evenly;
     h3{
+      font-family: Playfair Display;
       font-size: 20px;
       -webkit-text-fill-color: black;
       -webkit-text-stroke: 1px $white;
     }
   }
   h3{
+      font-family: Playfair Display;
       margin-top: 15px;
       margin-bottom: 20px;
       font-size: 80px;
@@ -309,6 +326,52 @@ div:hover{
   
 }
 
+#Videos{
+  border: #000 solid 3px;
+  height: 250px;
+  width: 440px;
+  display: flex;
+  flex-direction: column;
+  .videoloop{
+    position: fixed;
+    top: 10;
+    left: 470px;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    video{
+      height: 250px;
+    }
+  }
+  .text{
+    margin-top: 40px;
+    .prev-status{
+      z-index: 1;
+      display: flex;
+      flex-direction: row;
+      width: 500px;
+      justify-content: space-evenly;
+      h3{
+        font-family: Playfair Display;
+        font-size: 20px;
+        -webkit-text-fill-color: black;
+        -webkit-text-stroke: 1px $white;
+    }
+  }
+  h3{
+      font-family: Playfair Display;
+      margin-top: 15px;
+      margin-bottom: 20px;
+      font-size: 80px;
+      -webkit-text-fill-color: black;
+      -webkit-text-stroke: 2px $white;
+    } 
+  }
+  }
+#VideoTimer{
+  position: fixed;
+  z-index: 0;
+}
 
 @media (max-width: 720px){
   #Landing{
