--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@
   height: 150px;
 }
 #Home .container-home #divisores, #Home .result-home #divisores {
-  z-index: -1;
+  z-index: 1;
   border: #000 solid 1px;
   background-color: rgba(0, 0, 0, 0.1254901961);
   border-radius: 6%;
@@ -92,6 +92,7 @@
   width: 80%;
 }
 #Home .container-home #divisores .config-Timer-time, #Home .result-home #divisores .config-Timer-time {
+  z-index: 10;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -99,6 +100,7 @@
   height: auto;
 }
 #Home .container-home #divisores .config-Timer-time #time, #Home .result-home #divisores .config-Timer-time #time {
+  z-index: 20;
   background-color: #58a9ff;
   border-radius: 25% 25% 25% 25%;
   border: none;
@@ -122,6 +124,7 @@
   transition: 0.5s;
 }
 #Home .container-home #divisores .config-Timer-sessions, #Home .result-home #divisores .config-Timer-sessions {
+  z-index: 10;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -165,6 +168,7 @@
   transition: 0.5s;
 }
 #Home .container-home #divisores .config-Timer-background, #Home .result-home #divisores .config-Timer-background {
+  z-index: 10;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -242,6 +246,7 @@
 #Timer .buttons-timer {
   position: absolute;
   top: 10px;
+  background-color: rgba(77, 77, 77, 0.4980392157);
 }
 #Timer .buttons-timer img {
   width: 150px;
@@ -254,6 +259,7 @@
   transform: scale(0.8);
 }
 #Timer .timer-status {
+  margin-top: 10px;
   flex-direction: row;
   display: flex;
   justify-content: space-around;
@@ -265,7 +271,7 @@
 #Timer .timer-status h2 {
   font-family: Playfair Display;
   margin: 0;
-  font-size: 50px;
+  font-size: 70px;
   -webkit-text-fill-color: black;
   -webkit-text-stroke: 1px #f2f2f2;
 }
@@ -277,13 +283,13 @@
 }
 #Timer .time h1 {
   font-family: Playfair Display;
-  font-size: 390px;
+  font-size: 400px;
   -webkit-text-fill-color: black;
   -webkit-text-stroke: 8px #f2f2f2;
   margin: 0;
 }
 #Timer .ProgressBar {
-  margin-top: 30px;
+  margin-top: 50px;
   width: 70%;
 }
 
@@ -327,10 +333,10 @@
 #Videos .videoloop {
   position: fixed;
   top: 10;
-  left: 470px;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
+  right: 235px;
+  width: 25%;
+  height: 30%;
+  z-index: -2;
 }
 #Videos .videoloop video {
   height: 250px;
