--- a/src/App.scss
+++ b/src/App.scss
@@ -93,7 +93,6 @@ div:hover{
 
 #Home{
   // background: linear-gradient($firstColor 70%, #278efc);
-  
   width: 100vw;
   height: 100vh;
     display: flex;
@@ -119,7 +118,7 @@ div:hover{
       height: 150px;
     }
     #divisores{
-      z-index: -1;
+      z-index: 1;
 
       border: #000 solid 1px;
       background-color: #00000020;
@@ -129,9 +128,10 @@ div:hover{
       @include flexibility(column, space-around, center);
       width: 80%;
       .config-Timer-time{
-        
+        z-index: 10;
         @include sections();
         #time{
+          z-index: 20;
           @include button()
         }
         #time:hover{
@@ -143,6 +143,7 @@ div:hover{
       }
     }
     .config-Timer-sessions{
+      z-index: 10;
       #Background{
         @include button();
       }
@@ -164,6 +165,7 @@ div:hover{
       };
       
       .config-Timer-background{
+        z-index: 10;
       @include sections();
       #color{
         margin-right: 10px;
@@ -231,7 +233,6 @@ div:hover{
 
 };
 
-
 #Timer{
   width: 100vw;
   height: 100%;
@@ -240,6 +241,7 @@ div:hover{
   .buttons-timer{
     position: absolute;
     top: 10px;
+    background-color: #4d4d4d7f;
     img{
       width: 150px;
       transition: 0.3s;
@@ -252,6 +254,7 @@ div:hover{
     }
   }
   .timer-status{
+    margin-top: 10px;
     flex-direction: row;
     display: flex;
     justify-content: space-around;
@@ -260,10 +263,9 @@ div:hover{
     height: 10%;
     z-index: 1;
     h2{
-      
       font-family: Playfair Display;
       margin: 0;
-      font-size: 50px;
+      font-size: 70px;
       -webkit-text-fill-color: black;
       -webkit-text-stroke: 1px $white;
     }
@@ -275,14 +277,14 @@ div:hover{
     justify-content: start;
     h1{
       font-family: Playfair Display;
-      font-size: 390px;
+      font-size: 400px;
       -webkit-text-fill-color: black;
       -webkit-text-stroke: 8px $white;
       margin: 0;
     }
   }
     .ProgressBar{
-    margin-top: 30px;
+    margin-top: 50px;
     width: 70%;
   }
   
@@ -335,10 +337,10 @@ div:hover{
   .videoloop{
     position: fixed;
     top: 10;
-    left: 470px;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
+    right: 235px;
+    width: 25%;
+    height: 30%;
+    z-index: -2;
     video{
       height: 250px;
     }
@@ -368,6 +370,7 @@ div:hover{
     } 
   }
   }
+
 #VideoTimer{
   position: fixed;
   z-index: 0;
