--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 $firstColor: #a9d6ec;
 $blue: #58a9ff;
 $white: #f2f2f2;
-$secondary: #ffffff;
+$secondary: #ffffffea;
 @mixin flexibility($direction, $align, $justify){
   display: flex;
   flex-direction: $direction;
@@ -45,7 +45,6 @@ $secondary: #ffffff;
 }
 
 #Landing{
-  // background: linear-gradient($firstColor 70%, #278efc);
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -110,6 +109,31 @@ div:hover{
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    .images-back{
+      height: 400px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      .images-button{
+        display: grid;
+        grid-template-rows: 140px 140px;
+        grid-template-columns: 230px 230px;
+        grid-gap: 10px;
+        #button-back{
+          background-color: $firstColor;
+        }
+        #button-back:hover{
+          background-color: #00c3ff;
+        }
+        #button-back-active{
+          background-color: #58a9ff;
+        }
+        #environment{
+          width: 200px;
+          margin: 5px;
+        }
+      }
+    }
     .demo{
       width: 450px;
       height: 250px;
@@ -121,7 +145,7 @@ div:hover{
       z-index: 1;
 
       border: #000 solid 1px;
-      background-color: #00000020;
+      background-color: #c7f4ff9c;
       border-radius: 6%;
       padding-top: 0;
       padding-bottom: 15px;
@@ -150,6 +174,9 @@ div:hover{
       #Background:hover{
         cursor: pointer;
         transform: scale(1.18)
+      }
+      #Background-active{
+        @include active-button()
       }
       @include sections();
       #sessions{
@@ -241,7 +268,9 @@ div:hover{
   .buttons-timer{
     position: absolute;
     top: 10px;
-    background-color: #4d4d4d7f;
+    background-color: #27beff7f;
+    border-radius: 50%;
+    height: 150px;
     img{
       width: 150px;
       transition: 0.3s;
@@ -376,7 +405,37 @@ div:hover{
   z-index: 0;
 }
 
-@media (max-width: 720px){
+#Footer{
+  border-radius: 20% 20% 20% 20%;
+  height: 60px;
+  bottom: 10px;
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: #ffffff8c;
+  #social{
+    a{
+      margin: 0 10px 0 10px;
+    }
+  }
+  div{
+    margin: 0 20px 0 20px;
+    h2{
+      a{
+        font-size: 30px;
+        color: #2f91fa;
+        -webkit-text-stroke: 0.7px $white;
+        text-decoration: none;
+      }
+    }
+  }
+  img{
+    width: 70px;
+  }
+}
+
+@media (max-width: 1024px){
   #Landing{
     display: flex;
     flex-direction: column;
