responsive desing 1024px

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,22 +8,18 @@ $secondary: #ffffffea;
   align-items: $align;
   justify-content: $justify;
 }
-@mixin button{
+@mixin button (){
   background-color: $blue;
   border-radius: 25% 25% 25% 25%;
   border: none;
   color: $white;
-  height: 45px;
-  font-size: 20px;
   transition: 0.5s;
 }
-@mixin active-button{
+@mixin active-button (){
   background-color: $blue;
   border: 0.8px solid black;
   color: $white;
   border-radius: 25% 25% 25% 25%;
-  height: 45px;
-  font-size: 20px;  
   transform: scale(1.15);
   transition: 0.5s;
 }
@@ -91,9 +87,8 @@ div:hover{
 }
 
 #Home{
-  // background: linear-gradient($firstColor 70%, #278efc);
-  width: 100vw;
-  height: 100vh;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -126,17 +121,13 @@ div:hover{
           background-color: #00c3ff;
         }
         #button-back-active{
-          background-color: #58a9ff;
+          background-color: #3172ff;
         }
         #environment{
           width: 200px;
           margin: 5px;
         }
       }
-    }
-    .demo{
-      width: 450px;
-      height: 250px;
     }
     .kitty{
       height: 150px;
@@ -156,84 +147,52 @@ div:hover{
         @include sections();
         #time{
           z-index: 20;
-          @include button()
+          @include button();
+          height: 45px;
+          font-size: 20px;
         }
         #time:hover{
           cursor: pointer;
         transform: scale(1.18)
       }
       #time-active{
-        @include active-button()
+        @include active-button();
+        height: 45px;
+        font-size: 20px;
       }
     }
     .config-Timer-sessions{
       z-index: 10;
       #Background{
         @include button();
+        height: 45px;
+        font-size: 20px;
       }
       #Background:hover{
         cursor: pointer;
         transform: scale(1.18)
       }
       #Background-active{
-        @include active-button()
+        @include active-button();
+        height: 45px;
+        font-size: 20px;
       }
       @include sections();
       #sessions{
         @include button();
+        height: 45px;
+        font-size: 20px;
       }
       #sessions:hover{
         cursor: pointer;
           transform: scale(1.18)
         }
         #sessions-active{
-          @include active-button()
+          @include active-button();
+          height: 45px;
+          font-size: 20px;
         }
       };
-      
-      .config-Timer-background{
-        z-index: 10;
-      @include sections();
-      #color{
-        margin-right: 10px;
-        width: 48px;
-        height: 48px;
-        border: 1px solid #000;
-        border-radius: 50%;
-        transition: 0.5s;
-      }
-      #color:hover{
-        cursor: pointer;
-        transform: scale(1.05)
-      }
-      #color-active{
-        border: 3px solid #00c3ff;
-        margin-right: 10px;
-        width: 48px;
-        height: 48px;
-        border-radius: 50%;
-        transform: scale(1.1);
-      }
-      .default{
-      background-color: $firstColor;
-    }
-    .grey{
-      background-color: #4d4d4d;
-    }
-    .green{
-      background-color: #1a9825;
-    }
-    .blue{
-      background-color: #080064;
-    }
-    .violet{
-      background-color: #330b56;
-    }
-    .dark{
-      background-color: #191818;
-    }
-  }
-
 }
   
   .btn-start{
@@ -330,7 +289,6 @@ div:hover{
       width: 30px;
     }
   }
-
   .prev-status{
     display: flex;
     flex-direction: row;
@@ -350,11 +308,7 @@ div:hover{
       -webkit-text-fill-color: black;
       -webkit-text-stroke: 2px $white;
     } 
-  
-  
-  
-  
-  
+
 }
 
 #Videos{
@@ -437,35 +391,22 @@ div:hover{
 
 @media (max-width: 1024px){
   #Landing{
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: start;
-    align-items: center;
     h1{
-      font-size: 40px;
-      margin-bottom: 10px;
+      font-size: 80px;
+      margin-bottom: 40px;
     }
     div{
-      width: 25vw;
-      height: 50vh;
-      display: flex;
-      align-items: start;
-      justify-content: start;
+      width: auto;
       .clock{
-        position: absolute;
-        top: 180px;
-        right: 20px;
-        z-index: 1;
+        z-index: 10;
         transition: 1s;
+        position: relative;
       }
       .pomoCat{
         position: absolute;
-        top: 180px;
-        right: 45px;
+        margin: 50px 0px 0px -420px;
         z-index: 0;
         height: 40vh;
-        width: auto;
         transition: 1s;
         transform: rotate(0deg);
       }
@@ -476,18 +417,107 @@ div:hover{
       }
       .pomoCat{
         transform: scale(1);
-        margin: 0 0 10em 0;
-        top: 50px;
+        margin: -150px 0px 0px -420px;
       }
     }
-    div:hover{
-      .clock{
-        transform: scale(1);
+    
+  }
+
+  #Home{
+    .container-home, .result-home{
+      width: 40vw;
+      #divisores{
+        width: 80%;
+        .config-Timer-time{
+          #time{
+            height: 45px;
+            font-size: 20px;
+            width: auto;
+          }
+          #time-active{
+            height: 45px;
+            font-size: 20px;
+            width: auto;
+          }
       }
-      .pomoCat{
-        transform: scale(1) rotate(0deg);
-        margin: 0 0 0 0;
+      .config-Timer-sessions{
+        #Background{
+          height: 45px;
+          font-size: 15px;
+          width: auto;
+        }
+        #Background-active{
+          height: 45px;
+          font-size: 15px;
+          width: auto;
+        }
+        #sessions{
+          height: 45px;
+          font-size: 15px;
+          width: auto;
+        }
+          #sessions-active{
+            height: 45px;
+            font-size: 15px;
+            width: auto;
+          }
+        };
+  
       }
+      .images-back{
+        height: auto;
+        width: 80%;
+        border: solid 1px #000;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        .images-button{
+          display: flex;
+          flex-direction: column;
+          width: 165px;
+          margin-bottom: 20px;
+          #button-back{
+            background-color: $firstColor;
+          }
+          #button-back:hover{
+            background-color: #00c3ff;
+          }
+          #button-back-active{
+            background-color: #58a9ff;
+          }
+          #environment{
+            width: 140px;
+            margin: 5px;
+          }
+        }
+      }
+      .kitty{
+        height: 150px;
+      }
+    }
+
+    
+  }
+
+  #Timer{
+  @include flexibility(column, center, center);
+  gap: 30px;
+  .timer-status{
+    width: 90%;
+    h2{
+      font-size: 60px;
     }
   }
-}
+  .time{
+    h1{
+      font-size: 300px;
+      -webkit-text-stroke: 5px $white;
+    }
+  }
+    .ProgressBar{
+    width: 75%;
+  }
+  
+  }
+  }
