--- a/src/App.css
+++ b/src/App.css
@@ -90,15 +90,11 @@
   background-color: #00c3ff;
 }
 #Home .container-home .images-back .images-button #button-back-active, #Home .result-home .images-back .images-button #button-back-active {
-  background-color: #58a9ff;
+  background-color: #3172ff;
 }
 #Home .container-home .images-back .images-button #environment, #Home .result-home .images-back .images-button #environment {
   width: 200px;
   margin: 5px;
-}
-#Home .container-home .demo, #Home .result-home .demo {
-  width: 450px;
-  height: 250px;
 }
 #Home .container-home .kitty, #Home .result-home .kitty {
   height: 150px;
@@ -130,9 +126,9 @@
   border-radius: 25% 25% 25% 25%;
   border: none;
   color: #f2f2f2;
+  transition: 0.5s;
   height: 45px;
   font-size: 20px;
-  transition: 0.5s;
 }
 #Home .container-home #divisores .config-Timer-time #time:hover, #Home .result-home #divisores .config-Timer-time #time:hover {
   cursor: pointer;
@@ -143,10 +139,10 @@
   border: 0.8px solid black;
   color: #f2f2f2;
   border-radius: 25% 25% 25% 25%;
-  height: 45px;
-  font-size: 20px;
   transform: scale(1.15);
   transition: 0.5s;
+  height: 45px;
+  font-size: 20px;
 }
 #Home .container-home #divisores .config-Timer-sessions, #Home .result-home #divisores .config-Timer-sessions {
   z-index: 10;
@@ -161,9 +157,9 @@
   border-radius: 25% 25% 25% 25%;
   border: none;
   color: #f2f2f2;
+  transition: 0.5s;
   height: 45px;
   font-size: 20px;
-  transition: 0.5s;
 }
 #Home .container-home #divisores .config-Timer-sessions #Background:hover, #Home .result-home #divisores .config-Timer-sessions #Background:hover {
   cursor: pointer;
@@ -174,19 +170,19 @@
   border: 0.8px solid black;
   color: #f2f2f2;
   border-radius: 25% 25% 25% 25%;
-  height: 45px;
-  font-size: 20px;
   transform: scale(1.15);
   transition: 0.5s;
+  height: 45px;
+  font-size: 20px;
 }
 #Home .container-home #divisores .config-Timer-sessions #sessions, #Home .result-home #divisores .config-Timer-sessions #sessions {
   background-color: #58a9ff;
   border-radius: 25% 25% 25% 25%;
   border: none;
   color: #f2f2f2;
+  transition: 0.5s;
   height: 45px;
   font-size: 20px;
-  transition: 0.5s;
 }
 #Home .container-home #divisores .config-Timer-sessions #sessions:hover, #Home .result-home #divisores .config-Timer-sessions #sessions:hover {
   cursor: pointer;
@@ -197,56 +193,10 @@
   border: 0.8px solid black;
   color: #f2f2f2;
   border-radius: 25% 25% 25% 25%;
-  height: 45px;
-  font-size: 20px;
   transform: scale(1.15);
   transition: 0.5s;
-}
-#Home .container-home #divisores .config-Timer-background, #Home .result-home #divisores .config-Timer-background {
-  z-index: 10;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  width: auto;
-  height: auto;
-}
-#Home .container-home #divisores .config-Timer-background #color, #Home .result-home #divisores .config-Timer-background #color {
-  margin-right: 10px;
-  width: 48px;
-  height: 48px;
-  border: 1px solid #000;
-  border-radius: 50%;
-  transition: 0.5s;
-}
-#Home .container-home #divisores .config-Timer-background #color:hover, #Home .result-home #divisores .config-Timer-background #color:hover {
-  cursor: pointer;
-  transform: scale(1.05);
-}
-#Home .container-home #divisores .config-Timer-background #color-active, #Home .result-home #divisores .config-Timer-background #color-active {
-  border: 3px solid #00c3ff;
-  margin-right: 10px;
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  transform: scale(1.1);
-}
-#Home .container-home #divisores .config-Timer-background .default, #Home .result-home #divisores .config-Timer-background .default {
-  background-color: #a9d6ec;
-}
-#Home .container-home #divisores .config-Timer-background .grey, #Home .result-home #divisores .config-Timer-background .grey {
-  background-color: #4d4d4d;
-}
-#Home .container-home #divisores .config-Timer-background .green, #Home .result-home #divisores .config-Timer-background .green {
-  background-color: #1a9825;
-}
-#Home .container-home #divisores .config-Timer-background .blue, #Home .result-home #divisores .config-Timer-background .blue {
-  background-color: #080064;
-}
-#Home .container-home #divisores .config-Timer-background .violet, #Home .result-home #divisores .config-Timer-background .violet {
-  background-color: #330b56;
-}
-#Home .container-home #divisores .config-Timer-background .dark, #Home .result-home #divisores .config-Timer-background .dark {
-  background-color: #191818;
+  height: 45px;
+  font-size: 20px;
 }
 #Home .container-home .btn-start, #Home .result-home .btn-start {
   background-color: #58a9ff;
@@ -435,38 +385,23 @@
 }
 
 @media (max-width: 1024px) {
-  #Landing {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: start;
-    align-items: center;
-  }
   #Landing h1 {
-    font-size: 40px;
-    margin-bottom: 10px;
+    font-size: 80px;
+    margin-bottom: 40px;
   }
   #Landing div {
-    width: 25vw;
-    height: 50vh;
-    display: flex;
-    align-items: start;
-    justify-content: start;
+    width: auto;
   }
   #Landing div .clock {
-    position: absolute;
-    top: 180px;
-    right: 20px;
-    z-index: 1;
+    z-index: 10;
     transition: 1s;
+    position: relative;
   }
   #Landing div .pomoCat {
     position: absolute;
-    top: 180px;
-    right: 45px;
+    margin: 50px 0px 0px -420px;
     z-index: 0;
     height: 40vh;
-    width: auto;
     transition: 1s;
     transform: rotate(0deg);
   }
@@ -475,14 +410,93 @@
   }
   #Landing div:active .pomoCat {
     transform: scale(1);
-    margin: 0 0 10em 0;
-    top: 50px;
+    margin: -150px 0px 0px -420px;
   }
-  #Landing div:hover .clock {
-    transform: scale(1);
+  #Home .container-home, #Home .result-home {
+    width: 40vw;
   }
-  #Landing div:hover .pomoCat {
-    transform: scale(1) rotate(0deg);
-    margin: 0 0 0 0;
+  #Home .container-home #divisores, #Home .result-home #divisores {
+    width: 80%;
+  }
+  #Home .container-home #divisores .config-Timer-time #time, #Home .result-home #divisores .config-Timer-time #time {
+    height: 45px;
+    font-size: 20px;
+    width: auto;
+  }
+  #Home .container-home #divisores .config-Timer-time #time-active, #Home .result-home #divisores .config-Timer-time #time-active {
+    height: 45px;
+    font-size: 20px;
+    width: auto;
+  }
+  #Home .container-home #divisores .config-Timer-sessions #Background, #Home .result-home #divisores .config-Timer-sessions #Background {
+    height: 45px;
+    font-size: 15px;
+    width: auto;
+  }
+  #Home .container-home #divisores .config-Timer-sessions #Background-active, #Home .result-home #divisores .config-Timer-sessions #Background-active {
+    height: 45px;
+    font-size: 15px;
+    width: auto;
+  }
+  #Home .container-home #divisores .config-Timer-sessions #sessions, #Home .result-home #divisores .config-Timer-sessions #sessions {
+    height: 45px;
+    font-size: 15px;
+    width: auto;
+  }
+  #Home .container-home #divisores .config-Timer-sessions #sessions-active, #Home .result-home #divisores .config-Timer-sessions #sessions-active {
+    height: 45px;
+    font-size: 15px;
+    width: auto;
+  }
+  #Home .container-home .images-back, #Home .result-home .images-back {
+    height: auto;
+    width: 80%;
+    border: solid 1px #000;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+  #Home .container-home .images-back .images-button, #Home .result-home .images-back .images-button {
+    display: flex;
+    flex-direction: column;
+    width: 165px;
+    margin-bottom: 20px;
+  }
+  #Home .container-home .images-back .images-button #button-back, #Home .result-home .images-back .images-button #button-back {
+    background-color: #a9d6ec;
+  }
+  #Home .container-home .images-back .images-button #button-back:hover, #Home .result-home .images-back .images-button #button-back:hover {
+    background-color: #00c3ff;
+  }
+  #Home .container-home .images-back .images-button #button-back-active, #Home .result-home .images-back .images-button #button-back-active {
+    background-color: #58a9ff;
+  }
+  #Home .container-home .images-back .images-button #environment, #Home .result-home .images-back .images-button #environment {
+    width: 140px;
+    margin: 5px;
+  }
+  #Home .container-home .kitty, #Home .result-home .kitty {
+    height: 150px;
+  }
+  #Timer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+  }
+  #Timer .timer-status {
+    width: 90%;
+  }
+  #Timer .timer-status h2 {
+    font-size: 60px;
+  }
+  #Timer .time h1 {
+    font-size: 300px;
+    -webkit-text-stroke: 5px #f2f2f2;
+  }
+  #Timer .ProgressBar {
+    width: 75%;
   }
 }/*# sourceMappingURL=App.css.map */
